package app;

public interface Controller {
    void setModel(Model model);

    void invokeFirstLaunch();

    void focus();
}
