package app;

public class DefaultView implements View {

    private Model model;

    @Override
    public void setModel(Model model) {
        this.model = model;
    }

    @Override
    public void update() {

    }
}
