package app;

public interface View {
    void setModel(Model model);

    void update();

}
