@startuml

title __COURSE_BATTLESHIPS's Class Diagram__\n

  namespace  {
    class Loader {
    }
  }
  

  namespace  {
    namespace pp {
      class app.BattleShips {
      }
    }
  }
  

  namespace  {
    namespace pp {
      class app.BattleShipsTest {
      }
    }
  }
  

  namespace  {
    namespace pp {
      interface app.Controller {
      }
    }
  }
  

  namespace  {
    namespace pp {
      class app.DefaultController {
      }
    }
  }
  

  namespace  {
    namespace pp {
      class app.DefaultModel {
      }
    }
  }
  

  namespace  {
    namespace pp {
      class app.DefaultView {
      }
    }
  }
  

  namespace  {
    namespace pp {
      interface app.IGame {
      }
    }
  }
  

  namespace  {
    namespace pp {
      interface app.IShip {
      }
    }
  }
  

  namespace  {
    namespace pp {
      interface app.Model {
      }
    }
  }
  

  namespace  {
    namespace pp {
      interface app.View {
      }
    }
  }
  

  app.BattleShips .up.|> app.IGame
  app.BattleShips o-- app.Controller : controller
  app.BattleShips o-- app.Model : model
  app.BattleShips o-- app.View : view
  app.BattleShipsTest -up-|> junit.framework.TestCase
  app.DefaultController .up.|> app.Controller
  app.DefaultController o-- app.Model : model
  app.DefaultModel .up.|> app.Model
  app.DefaultView .up.|> app.View
  app.DefaultView o-- app.Model : model


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
